# microsoft-entra-token-studio

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  blog-post-intro.md  blog-post.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
_backup/: index.html  package.json  tsconfig.json  vite.config.ts
_backup/src/client/: main.ts  style.css
_backup/src/server/: index.ts
docs/blog/: blog-post.md
scripts/: generate-tauri-icons.js  release.js  sync-version.js
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts
sidecar/src/handlers/: app-token.ts  azure-cli.ts  credential-status.ts  keyvault.ts  user-token.ts
specs/001-pinned-tokens/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pinned-tokens/checklists/: requirements.md
specs/001-pinned-tokens/contracts/: README.md
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs
src/lib/: constants.ts  types.ts  utils.ts
src/lib/components/: ConditionalTooltip.svelte  DecodedClaims.svelte  FavoriteFormSheet.svelte  FavoritesList.svelte  FilterableAppSelect.svelte  FormSheetLayout.svelte  HistoryList.svelte  (+21 more)
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/server/: index.ts
(+143 files in other folders)
