[package]
name = "entra-token-studio"
version = "0.1.0-alpha.1"
description = "A local developer workbench for Microsoft Entra access tokens"
authors = ["Karthik Rao"]
license = "MIT"
repository = "https://github.com/raokarthik99/microsoft-entra-token-studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
keyring = "3.6"
base64 = "0.22"
getrandom = "0.2"
